<?xml version="1.0"?>
<package>
  <name>racecar</name>
  <version>0.0.1</version>
  <description>RACECAR launch scripts</description>

  <author>Theo Kanning</author>
  <maintainer email="theokanning@gmail.com">Theo Kanning</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend></build_depend>-->

  <run_depend>razor_imu_9dof</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rplidar</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_teleop</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>laser_scan_matcher</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>compressed_image_transport</run_depend>

  <!-- mapping -->
  <run_depend>gmapping</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>robot_pose_ekf</run_depend>

  <export>
  </export>
</package>
